--- a/index.html
+++ b/index.html
@@ -58,8 +58,13 @@
     ></iframe>
     <footer>
       This project was coded by
-      <a href="https://github.com/kessjelly">Jessica Kelly</a> and is
-      open-sourced on Github
+      <a href="https://github.com/kessjelly" target="_blank">Jessica Kelly</a>
+      and is open-sourced on
+      <a
+        href="https://github.com/kessjelly/my-dream-home-project"
+        target="_blank"
+        >Github</a
+      >.
     </footer>
   </body>
 </html>
