Basic CSS added

--- a/index.html
+++ b/index.html
@@ -3,8 +3,43 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Libertinus+Mono&display=swap"
+      rel="stylesheet"
+    />
     <title>My dream home</title>
   </head>
+  <style>
+    body {
+      background-color: #9c633b;
+      font-family: "Libertinus Mono", monospace;
+      color: white;
+    }
+
+    button {
+      float: right;
+      color: #d0610e;
+      background-color: aliceblue;
+      border: none;
+      padding: 5px 5px;
+      font-size: 15px;
+      box-shadow: 5px 5px 5px black;
+    }
+
+    button:hover {
+      cursor: pointer;
+    }
+
+    .a:hover {
+      cursor: pointer;
+    }
+
+    footer {
+      font-size: 13px;
+    }
+  </style>
   <body>
     <button>Beach vibes</button>
     <h1>My dream home</h1>
@@ -46,16 +81,6 @@
       alt="my front door"
       width="300"
     />
-    <iframe
-      style="border-radius: 12px"
-      src="https://open.spotify.com/embed/track/7MRSAhuQAF4LTZ0mHaxn8r?utm_source=generator"
-      width="40%"
-      height="152"
-      frameborder="0"
-      allowfullscreen=""
-      allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-      loading="lazy"
-    ></iframe>
     <footer>
       This project was coded by
       <a href="https://github.com/kessjelly" target="_blank">Jessica Kelly</a>
