--- a/index.html
+++ b/index.html
@@ -26,12 +26,38 @@
       padding: 5px 5px;
       font-size: 15px;
       box-shadow: 5px 5px 5px black;
+      margin-right: 40px;
+      border-radius: 5px;
     }
 
     button:hover {
       cursor: pointer;
     }
 
+    h3 {
+      text-align: center;
+      font-size: 30px;
+    }
+    h3::before,
+    h3::after {
+      background-color: white;
+      content: "";
+      display: inline-block;
+      height: 1px;
+      position: relative;
+      vertical-align: middle;
+      width: 50%;
+    }
+
+    h3::before {
+      right: 0.5em;
+      margin-left: -50%;
+    }
+
+    h3::after {
+      left: 0.5em;
+      margin-right: -50%;
+    }
     .a:hover {
       cursor: pointer;
     }
