Changed and removed styling and images

--- a/index.html
+++ b/index.html
@@ -5,58 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Libertinus+Mono&display=swap"
-      rel="stylesheet"
-    />
     <title>My dream home</title>
   </head>
   <style>
     body {
       background-color: #9c633b;
-      font-family: "Libertinus Mono", monospace;
       color: white;
     }
 
-    button {
-      float: right;
-      color: #d0610e;
-      background-color: aliceblue;
-      border: none;
-      padding: 5px 5px;
-      font-size: 15px;
-      box-shadow: 5px 5px 5px black;
-      margin-right: 40px;
-      border-radius: 5px;
-    }
-
-    button:hover {
-      cursor: pointer;
-    }
-
-    h3 {
-      text-align: center;
-      font-size: 30px;
-    }
-    h3::before,
-    h3::after {
-      background-color: white;
-      content: "";
-      display: inline-block;
-      height: 1px;
-      position: relative;
-      vertical-align: middle;
-      width: 50%;
-    }
-
-    h3::before {
-      right: 0.5em;
-      margin-left: -50%;
-    }
-
-    h3::after {
-      left: 0.5em;
-      margin-right: -50%;
+    img {
     }
     .a:hover {
       cursor: pointer;
@@ -67,46 +24,27 @@
     }
   </style>
   <body>
-    <button>Beach vibes</button>
-    <h1>My dream home</h1>
-    <img
-      src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/169/705/original/pexels-charles-parker-5847592.jpg?1751762181"
-      alt="New york city"
-      width="300"
-    />
-    <img
-      src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/169/706/original/pexels-cottonbro-4866040.jpg?1751762229"
-      alt="library"
-      width="300"
-    />
-    <img
-      src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/169/707/original/pexels-polina-kovaleva-5644367.jpg?1751765359"
-      alt="living room"
-      width="300"
-    />
-    <img
-      src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/169/708/original/pexels-helloaesthe-31237893.jpg?1751765474"
-      alt="bed"
-      width="300"
-    />
-    <h3>New York City</h3>
-
-    <p>
-      My dream home is a classic New York City brownstone, nestled on a quiet,
-      tree-lined street with ivy creeping up its historic façade. There's
-      something timeless and grounding about the architecture—each creaky
-      floorboard and tall window tells a story. But the heart of this home is
-      the library: a cozy, light-filled room with floor-to-ceiling bookshelves,
-      a sliding ladder, and a worn leather armchair by the window. In a city
-      that never stops moving, this space offers stillness—a personal sanctuary
-      where stories from every corner of the world live within arm’s reach. It's
-      the perfect blend of urban energy and quiet retreat.
-    </p>
-    <img
-      src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/169/704/original/alessandro-chitarrini-EbWKiBB3aLg-unsplash.jpg?1751762168"
-      alt="my front door"
-      width="300"
-    />
+    <div class="dream-home">
+      <img
+        src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/169/708/original/pexels-helloaesthe-31237893.jpg?1751765474"
+        alt="bed"
+        width="600"
+        height="600"
+      />
+      <h1>My dream home</h1>
+      <p>
+        My dream home is a classic New York City brownstone, nestled on a quiet,
+        tree-lined street with ivy creeping up its historic façade. There's
+        something timeless and grounding about the architecture—each creaky
+        floorboard and tall window tells a story. But the heart of this home is
+        the library: a cozy, light-filled room with floor-to-ceiling
+        bookshelves, a sliding ladder, and a worn leather armchair by the
+        window. In a city that never stops moving, this space offers stillness—a
+        personal sanctuary where stories from every corner of the world live
+        within arms reach. It's the perfect blend of urban energy and quiet
+        retreat.
+      </p>
+    </div>
     <footer>
       This project was coded by
       <a href="https://github.com/kessjelly" target="_blank">Jessica Kelly</a>
